footer alignement fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
 * {
   font-family: Raleway;
+  box-sizing: border-box;
 }
 
 a {
@@ -594,7 +595,8 @@ footer {
 }
 
 .footer-block {
-  padding: 1rem 4.2rem 3rem 4.2rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 
 .footer-unit {
@@ -602,6 +604,7 @@ footer {
   flex-direction: column;
   align-items: flex-start;
   line-height: 2rem;
+  width: 320px;
 }
 
 .footer-title {
@@ -612,15 +615,15 @@ footer {
 @media screen and (min-width: 1024px) {
   footer {
     width: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 4.1rem;
   }
 
   .footer-block {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     max-width: 1600px;
-  }
-  .footer-unit {
-    flex-grow: 1;
+    width: 100%;
+    justify-content: space-between;
   }
 }
